# amazing-qr

./: .gitignore  LICENSE.md  README-cn.md  README.md  amzqr.py  data.py  draw.py  ecc.py  matrix.py  myQR.py  myqr.py  myqrcode.py  pyproject.toml  requirements.txt  setup.py  structure.py  theqrmodule.py
.codeboarding/: Application_Orchestrator.md  QR_Code_Core_Engine.md  QR_Data_Processing_Modules.md  on_boarding.md
.github/workflows/: ci.yml
MyQR/: __main__.py  myqr.py  terminal.py
MyQR/mylibs/: ECC.py  constant.py  data.py  draw.py  matrix.py  structure.py  theqrmodule.py
amzqr/: amzqr.py  terminal.py  ui.py
amzqr/mylibs/: ECC.py  constant.py  data.py  draw.py  matrix.py  structure.py  theqrmodule.py
gifting_catalog/: add_name.sh  gen_qrcode.sh
labels/: gen.sh
mylibs/: ECC.py  constant.py  data.py  draw.py  matrix.py  theqrmodule.py
storemode/: an.sh  gen.sh  gen_ipad.sh  myQR.py
tests/: test_combine_layout.py  test_constant_layout.py  test_data.py  test_gif.py  test_matrix.py  test_pipeline.py  test_run_smoke.py
